# skills-code-with-codespaces

./: .gitignore  DESIGN.md  README.md
backend/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/app/: main.py
backend/tests/: test_auth.py
frontend/: index.html
frontend/src/: App.css  App.jsx  index.css
